# tikzpy

./: .gitignore  .readthedocs.yaml  README.md  __init__.py  cls_assembly.py  cls_canavas.py  cls_colors.py  cls_data.py  cls_groups.py  cls_labels.py  cls_plots.py  cls_points.py  cls_racime.py  cls_shapes.py  et --soft HEAD~1q  files_crawl.py  license.txt  make.bat  makefile  notes.txt  obj_data.py  py_tikz.py  py_tikz.py~  pyproject.toml  pyproject.toml.old  read_sign  read_sign_event  setup.cfg  untitled.txt
assemblies/: cls_racime.py
buffer_data/: bufferlib.py  bufferlib_old.py  cls_data_buffer.py  minilablib.py  wmclib.py  wmclibdata.py
docs/: _02_pytikZ_shapes.rst  _03_pytikZ_plots.rst  _04_pytikZ_labels.rst  _06_pytikZ_groups.rst  conf.py  conf_boot_strap.py  index.rst  submodule.rst
docs/_examples/: generate_examples.py
docu/: _00_pytikZ.rst  _01_pytikZ_points.rst  _03_pytikZ_plots.rst  _05_pytikZ_colors.rst  _files_crawl.rst  conf.py  index.rst
plots/: cls_arrow_vertical.py  cls_bars_vertical.py  cls_racime.py
source/: _00_pytikZ.rst  _01_pytikZ_points.rst  _02_pytikZ_shapes.rst  _03_pytikZ_assembly.rst  _03_pytikZ_plots.rst  _04_pytikZ_labels.rst  _05_pytikZ_colors.rst  _06_pytikZ_groups.rst  conf.py  conf_boot_strap.py  index.rst
source/_examples/: generate_examples.py
src/tikzpy/: __init__.py  cls_canavas.py  (+8 more)
src/tikzpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: plot1.tikz.eps  plot1.tikz.tex  test.tikz.eps  test.tikz.tex  test_jupyter.ipynb  test_points.py
tikzpy/: README.md  cls_colors.py  cls_data.py  cls_plots.py
(+193 files in other folders)
