[metadata]
name = tikzpy
version = 0.0.2
author = narfisaeu
author_email = tikzpy@narfisa.eu
url = https://github.com/narfisaeu/tikzpy.git
description = TikZpy simplifies the art of drawing by code tikz figures
long_description = file: README.md
long_description_content_type = text/markdown
keywords = tikz, tikzpy, latex
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    matplotlib
package_dir=
    =src

[options.packages.find]
where=src

[options.package_data]
tikzpy.xpdftools_bin32 =
    *.exe
